Fixed: z-index of notifications

--- a/src/styles/themes/default/notifications.styl
+++ b/src/styles/themes/default/notifications.styl
@@ -6,7 +6,7 @@
   size(100%, 0)
   flex-direction: column
   justify-content: flex-end
-  z-index: 5000
+  z-index: 2000
 
 .Notifications .notification
   box(relative, flex)
